# OpenGlStlModelRenderer

./: CMakeLists.txt  README.md  Shader.hpp
models/: cube.stl
shaders/: phong.frag  phong.vert
src/: Camera.hpp  OrbitalCamera.hpp  STLLoader.hpp  main.cpp
tests/: test_stl_loader.cpp
